# apps/opik-backend/src/main/java/com/comet/opik/domain/FeedbackScoreDAO.java
@@ -1,7 +1,7 @@
 package com.comet.opik.domain;
 
 import com.comet.opik.api.FeedbackScore;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreBatchTracingItem;
 import com.comet.opik.api.ScoreSource;
 import com.comet.opik.infrastructure.db.TransactionTemplateAsync;
 import com.comet.opik.utils.TemplateUtils;
@@ -55,9 +55,9 @@ public interface FeedbackScoreDAO {
 
     Mono<Long> deleteByEntityIdAndNames(EntityType entityType, UUID entityId, Set<String> names);
 
-    Mono<Long> scoreBatchOf(EntityType entityType, List<FeedbackScoreBatchItem> scores);
+    Mono<Long> scoreBatchOf(EntityType entityType, List<FeedbackScoreBatchTracingItem> scores);
 
-    Mono<Long> scoreBatchOfThreads(List<FeedbackScoreBatchItem> scores);
+    Mono<Long> scoreBatchOfThreads(List<FeedbackScoreBatchTracingItem> scores);
 
     Mono<List<String>> getTraceFeedbackScoreNames(UUID projectId);
 
@@ -308,7 +308,7 @@ class FeedbackScoreDAOImpl implements FeedbackScoreDAO {
             @NonNull FeedbackScore score,
             @NonNull UUID projectId) {
 
-        FeedbackScoreBatchItem item = FeedbackScoreMapper.INSTANCE.toFeedbackScore(entityId,
+        FeedbackScoreBatchTracingItem item = FeedbackScoreMapper.INSTANCE.toFeedbackScore(entityId,
                 projectId, score);
 
         return scoreBatchOf(entityType, List.of(item));
@@ -323,7 +323,8 @@ class FeedbackScoreDAOImpl implements FeedbackScoreDAO {
 
     @Override
     @WithSpan
-    public Mono<Long> scoreBatchOf(@NonNull EntityType entityType, @NonNull List<FeedbackScoreBatchItem> scores) {
+    public Mono<Long> scoreBatchOf(@NonNull EntityType entityType,
+            @NonNull List<FeedbackScoreBatchTracingItem> scores) {
 
         Preconditions.checkArgument(CollectionUtils.isNotEmpty(scores), "Argument 'scores' must not be empty");
 
@@ -343,13 +344,14 @@ class FeedbackScoreDAOImpl implements FeedbackScoreDAO {
     }
 
     @Override
-    public Mono<Long> scoreBatchOfThreads(@NonNull List<FeedbackScoreBatchItem> scores) {
+    public Mono<Long> scoreBatchOfThreads(@NonNull List<FeedbackScoreBatchTracingItem> scores) {
         Preconditions.checkArgument(CollectionUtils.isNotEmpty(scores), "Argument 'scores' must not be empty");
 
         return scoreBatchOf(EntityType.THREAD, scores);
     }
 
-    private void bindParameters(EntityType entityType, List<FeedbackScoreBatchItem> scores, Statement statement) {
+    private void bindParameters(EntityType entityType, List<FeedbackScoreBatchTracingItem> scores,
+            Statement statement) {
         for (var i = 0; i < scores.size(); i++) {
 
             var feedbackScoreBatchItem = scores.get(i);
